--- a/index.html
+++ b/index.html
@@ -66,37 +66,37 @@
                     <div class="player">
                         <img src="images/player-6.png" alt="">
                         <h3>Mauro Icardi </h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer</p>
+                        <p>Mauro Emanuel Icardi  born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain </p>
                     </div>
                     <div class="player">
                         <img src="images/player-7.png" alt="">
                         <h3>Di Maria</h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer</p>
+                        <p>Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/player-8.png" alt="">
                         <h3>Kylian Mbappé</h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer</p>
+                        <p>Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/player-9.png" alt="">
                         <h3>Mohamed Salah</h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer</p>
+                        <p>Mohamed Salah Hamed Mahrous Ghaly  Egyptian Arabic pronunciation: [mæˈħam.mæd sˤɑˈlɑːħ ˈɣæːli]; born 15 June 1992) is an Egyptian professional footballer</p>
                     </div>
                     <div class="player">
                         <img src="images/player-10.png" alt="">
                         <h3>Harry Kane</h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer</p>
+                        <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/player-11.png" alt="">
                         <h3>Kevin De Bruyne</h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer</p>
+                        <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team. </p>
                     </div>
                     <div class="player">
                         <img src="images/player-12.png" alt="">
                         <h3>Philippe Coutinho</h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer</p>
+                        <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. </p>
                     </div>
                 </div>            
         </section>
@@ -140,14 +140,14 @@
                 <div class="blog">
                     <div class="blogs_content">
                         <img src="images/blog2.jpeg" alt="">
-                        <h2>favors Brazil; Argentina spots Uruguay</h2>
+                        <h2>Copa America 2021: Brazil march on, Chile face fine</h2>
                         <p>The hottest competition could be in the other half of the quarterfinals, where archrivals Argentina and Uruguay could meet in the semifinals.The quarterfinals were finalized on Monday after the last two group matches. </p>
                      </div>
                 </div>
                 <div class="blog">
                     <div class="blogs_content">
                         <img src="images/blog3.jpg" alt="">
-                        <h2>favors Brazil; Argentina spots Uruguay</h2>
+                        <h2>Colombia beat Peru 3-2 in the third-place match </h2>
                         <p>The hottest competition could be in the other half of the quarterfinals, where archrivals Argentina and Uruguay could meet in the semifinals.The quarterfinals were finalized on Monday after the last two group matches.</p>
                      </div>
                 </div>                
