--- a/index.html
+++ b/index.html
@@ -131,25 +131,31 @@
             </div>
             <div class="blogs">
                 <div class="blog">
+                    <article>
                     <div class="blogs_content">
                         <img src="images/blog1.jpg" alt="">
                         <h2>favors Brazil; Argentina spots Uruguay</h2>
                         <p>The hottest competition could be in the other half of the quarterfinals, where archrivals Argentina and Uruguay could meet in the semifinals.The quarterfinals were finalized on Monday after the last two group matches. </p>
                      </div>
+                    </article>
                 </div>
                 <div class="blog">
+                    <article>
                     <div class="blogs_content">
                         <img src="images/blog2.jpeg" alt="">
                         <h2>Copa America 2021: Brazil march on, Chile face fine</h2>
                         <p>The hottest competition could be in the other half of the quarterfinals, where archrivals Argentina and Uruguay could meet in the semifinals.The quarterfinals were finalized on Monday after the last two group matches. </p>
                      </div>
+                    </article>
                 </div>
                 <div class="blog">
+                    <article>
                     <div class="blogs_content">
                         <img src="images/blog3.jpg" alt="">
                         <h2>Colombia beat Peru 3-2 in the third-place match </h2>
                         <p>The hottest competition could be in the other half of the quarterfinals, where archrivals Argentina and Uruguay could meet in the semifinals.The quarterfinals were finalized on Monday after the last two group matches.</p>
                      </div>
+                    </article>
                 </div>                
             </div>
         </section>
